Fix code text wrapping

--- a/src/components/objects/Source/Source.module.scss
+++ b/src/components/objects/Source/Source.module.scss
@@ -4,6 +4,10 @@
   background-color: white;
   border-radius: 4px;
   font-size: 1.1em;
+
+  code {
+    word-break: break-word;
+  }
 }
 
 .selected {
