--- a/src/components/objects/ValidationMessage/ValidationMessage.module.scss
+++ b/src/components/objects/ValidationMessage/ValidationMessage.module.scss
@@ -14,6 +14,7 @@
     padding: 2px 4px;
     border: 1px dashed #999;
     font-weight: 400;
+    word-break: break-word;
 
     .highlighted {
       background-color: #ffff80;
